bandit gotta get all the stones

--- a/README
+++ b/README
@@ -1,7 +1,6 @@
 Left click moves bandit.
-Right click moves skeleton.
-Spacebar runs pathfinding algorithm.
-W creates and removes a wall.
+Right click adds and removes stones.
+W adds and removes a wall.
 
               _ |\_
               \` ..\
