updated readme with state info

--- a/README
+++ b/README
@@ -2,6 +2,8 @@ Left click moves bandit.
 Right click adds and removes stones.
 W adds and removes a wall.
 
+Lower left hand corner will show current state of bandit.
+
               _ |\_
               \` ..\
          __,.-" =__Y=
