--- a/README
+++ b/README
@@ -1,9 +1,10 @@
 Left click moves bandit.
 Right click adds and removes stones.
 W adds and removes a wall.
+B adds a build spot.
 
 Lower left hand corner will show current state of bandit.
-
+Bandit needs a build spot and at least one stone to start building.
 
               _ |\_
               \` ..\
